--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,35 @@ attrs==23.2.0
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.2.2
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Django==5.0.6
+django-filter==24.3
+et-xmlfile==1.1.0
 gitdb==4.0.11
 GitPython==3.1.43
-idna==3.7
+googletrans==3.0.0
+gunicorn==22.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.8.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
 Jinja2==3.1.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+langdetect==1.0.9
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mssql-django==1.5
 numpy==1.26.4
+openpyxl==3.1.5
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
@@ -31,10 +45,12 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.35.1
 requests==2.31.0
+rfc3986==1.5.0
 rich==13.7.1
 rpds-py==0.18.1
 six==1.16.0
 smmap==5.0.1
+sniffio==1.3.1
 sqlparse==0.5.0
 streamlit==1.34.0
 tenacity==8.3.0
@@ -45,4 +61,4 @@ typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 watchdog==4.0.0
-chardet
+xlrd==2.0.1
